--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -2,15 +2,27 @@
 <html>
 <head>
   <title>Terms and Conditions – The Red Apple Preschool</title>
+  <meta charset="UTF-8">
 </head>
 <body>
   <h1>Terms and Conditions</h1>
-  <p>By using The Red Apple Preschool app, you agree to the following:</p>
+
+  <p>By using The Red Apple Preschool app, you agree to the following terms and conditions:</p>
+
   <ul>
-    <li>Your personal data is stored securely and only used for academic tracking purposes.</li>
-    <li>You are responsible for maintaining the confidentiality of your login credentials.</li>
-    <li>The school reserves the right to update features and data policies at any time.</li>
+    <li>Your personal data (such as name, attendance, and academic records) is stored securely and used only for school-related purposes.</li>
+    <li>You are responsible for maintaining the confidentiality of your login credentials. Do not share your account with others.</li>
+    <li>The school reserves the right to modify, suspend, or discontinue any feature of the app without prior notice.</li>
+    <li>The app may display event photos for student participation purposes. No photos will be used outside the app without prior consent.</li>
+    <li>Unauthorized access, tampering, or misuse of the app is strictly prohibited and may result in account termination.</li>
+    <li>The information provided in the app is for general reference. The school is not liable for any errors, delays, or data loss caused by technical issues.</li>
+    <li>All intellectual property, including logos, designs, and content, belongs to The Red Apple Preschool and may not be reused without permission.</li>
+    <li>Push notifications may be sent for homework updates, results, events, or important announcements. You may opt out from device settings.</li>
+    <li>We may update these terms from time to time. Continued use of the app indicates acceptance of the updated terms.</li>
+    <li>If you do not agree with any part of these terms, you should stop using the app immediately.</li>
   </ul>
-  <p>For any questions, contact the school administration.</p>
+
+  <p>For any queries, complaints, or support requests, please contact the school administration directly.</p>
 </body>
 </html>
+
